--- a/index.html
+++ b/index.html
@@ -1,1 +1,102 @@
-salam
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Professional Merchandising Company</title>
+    <link rel="stylesheet" href="styles.css">
+    <!-- Google Fonts for modern typography -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
+
+    <!-- Header with Navigation -->
+    <header class="main-header">
+        <nav>
+            <div class="logo">
+                <img src="logo.png" alt="Company Logo">
+            </div>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <a href="#contact" class="cta-button">Get a Quote</a>
+        </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+        <div class="hero-content">
+            <h1>Empowering Your Brand with Premium Merchandise</h1>
+            <p>Expert merchandising solutions tailored to your business needs.</p>
+            <a href="#services" class="cta-button">Explore Our Services</a>
+        </div>
+    </section>
+
+    <!-- Services Section -->
+    <section id="services" class="services">
+        <h2>What We Offer</h2>
+        <div class="service-grid">
+            <div class="service-item">
+                <i class="icon"></i>
+                <h3>Custom Merchandising</h3>
+                <p>Delivering high-quality merchandise that speaks to your brand’s identity.</p>
+            </div>
+            <div class="service-item">
+                <i class="icon"></i>
+                <h3>Brand Strategy</h3>
+                <p>Helping you build and execute merchandising strategies that resonate.</p>
+            </div>
+            <div class="service-item">
+                <i class="icon"></i>
+                <h3>Global Sourcing</h3>
+                <p>Access to a global network for sourcing the best materials and products.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonials or Client Logos -->
+    <section id="testimonials" class="testimonials">
+        <h2>Our Clients</h2>
+        <div class="client-logos">
+            <img src="client1.png" alt="Client 1 Logo">
+            <img src="client2.png" alt="Client 2 Logo">
+            <img src="client3.png" alt="Client 3 Logo">
+        </div>
+    </section>
+
+    <!-- About Us Section -->
+    <section id="about" class="about">
+        <div class="about-content">
+            <h2>About Our Company</h2>
+            <p>With over 20 years of experience, we specialize in providing top-notch merchandising solutions to brands worldwide. From strategy to execution, we’ve got you covered.</p>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <h2>Contact Us</h2>
+        <form action="#" method="POST">
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <textarea placeholder="Your Message" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
+    </section>
+
+    <!-- Footer -->
+    <footer class="main-footer">
+        <div class="footer-content">
+            <p>&copy; 2024 Your Merchandising Company. All rights reserved.</p>
+            <ul class="social-links">
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">LinkedIn</a></li>
+            </ul>
+        </div>
+    </footer>
+
+</body>
+</html>
